# dn

./: Cargo.toml  LICENSE  README.MD
coverage/: tests.lcov
dn-lib/: Cargo.toml
dn-lib/src/: formula.rs  justif.rs  proof.rs  record.rs
dn-poofs/: firstproof.proof
dn-reader/: Cargo.toml
dn-reader/src/: main.rs
dnlib/: Cargo.toml  README.MD  test_cov.cmds
dnlib/proofs/: second.proof  third.proof
dnlib/src/: formula.rs  justif.rs  lib.rs  proof.rs  record.rs
dnlib/src/formula/: tests.rs
dnreader/: Cargo.toml
dnreader/src/: main.rs
src/: formula.rs  interactive_interpreter.rs  justif.rs  lib.rs  proof.rs  proof_checker.rs  record.rs
xtask/: Cargo.toml
